[package]
name = "stomata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.2"
actix-web = { version = "4", features = ["openssl"] }
awc = "3"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
futures-util = "0.3.25"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
